--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="header-content container">
         <nav class="navigation">
           <a href="" class="logo header__logo link"
@@ -60,17 +60,17 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
       <!--Hero-->
-      <section class="general">
+      <!-- <section class="general">
         <div class="container">
           <h1 class="general__title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="general__btn" data-modal-open>
             Заказать услугу
           </button>
         </div>
-      </section>
+      </section> -->
       <!--Specificity-->
       <section class="specificity section">
         <div class="container">
@@ -128,7 +128,7 @@
         </div>
       </section>
       <!--Activity-->
-      <section class="activity section">
+      <!-- <section class="activity section">
         <div class="container">
           <h2 class="activity__title">Чем мы занимаемся</h2>
           <ul class="activity__list list">
@@ -158,9 +158,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--Команда-->
-      <section class="team section">
+      <!-- <section class="team section">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list list">
@@ -330,9 +330,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--Клиенты-->
-      <section class="clients">
+      <!-- <section class="clients">
         <div class="container">
           <h2 class="clients__title">Постоянные клиенты</h2>
           <ul class="clients__icon list">
@@ -374,10 +374,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!--Футер-->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer">
         <div class="footer-address">
           <a href="" class="logo footer__logo link"
@@ -447,7 +447,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!--Модальное окно-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
