--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </div>
       </section> -->
       <!--Команда-->
-      <!-- <section class="team section">
+      <!-- <!-- <section class="team section"> -->
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list list">
