--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
       </section>
       <!--Activity-->
-      <!-- <section class="activity section">
+      <section class="activity section hidden">
         <div class="container">
           <h2 class="activity__title">Чем мы занимаемся</h2>
           <ul class="activity__list list">
@@ -158,9 +158,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--Команда-->
-      <!-- <!-- <section class="team section"> -->
+      <section class="team section">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list list">
@@ -330,43 +330,44 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
+      -->
       <!--Клиенты-->
-      <!-- <section class="clients">
+      <section class="clients">
         <div class="container">
           <h2 class="clients__title">Постоянные клиенты</h2>
           <ul class="clients__icon list">
-            <li>
+            <li class="clients__item">
               <a href="" class="client__link"
                 ><svg class="client-icon" width="106" height="60">
                   <use href="./img/symbol-defs.svg#icon-Logo-1"></use></svg
               ></a>
             </li>
-            <li>
+            <li class="clients__item">
               <a href="" class="client__link"
                 ><svg width="106" height="60">
                   <use href="./img/symbol-defs.svg#icon-Logo-2"></use></svg
               ></a>
             </li>
-            <li>
+            <li class="clients__item">
               <a href="" class="client__link"
                 ><svg width="106" height="60">
                   <use href="./img/symbol-defs.svg#icon-Logo-3"></use></svg
               ></a>
             </li>
-            <li>
+            <li class="clients__item">
               <a href="" class="client__link"
                 ><svg width="106" height="60">
                   <use href="./img/symbol-defs.svg#icon-Logo-4"></use></svg
               ></a>
             </li>
-            <li>
+            <li class="clients__item">
               <a href="" class="client__link"
                 ><svg width="106" height="60">
                   <use href="./img/symbol-defs.svg#icon-Logo-5"></use></svg
               ></a>
             </li>
-            <li>
+            <li class="clients__item">
               <a href="" class="client__link"
                 ><svg width="106" height="60">
                   <use href="./img/symbol-defs.svg#icon-Logo-6"></use></svg
@@ -374,7 +375,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!--Футер-->
     <!-- <footer class="footer">
