--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="header-content container">
         <nav class="navigation">
           <a href="" class="logo header__logo link"
@@ -58,7 +58,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
       <section class="projects section">
         <div class="container">
@@ -231,7 +231,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer">
         <div class="footer-address">
           <a href="" class="logo footer__logo link"
@@ -301,6 +301,6 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
