--- a/index.html
+++ b/index.html
@@ -378,9 +378,9 @@
       </section>
     </main>
     <!--Футер-->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer">
-        <div class="footer-address">
+        <div class="footer__address">
           <a href="" class="logo footer__logo link"
             >Web<span class="logo__studio logo__studio--accent">Studio</span></a
           >
@@ -448,7 +448,8 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
+    -->
     <!--Модальное окно-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
