--- a/index.html
+++ b/index.html
@@ -331,7 +331,6 @@
           </ul>
         </div>
       </section>
-      -->
       <!--Клиенты-->
       <section class="clients">
         <div class="container">
@@ -379,7 +378,7 @@
     </main>
     <!--Футер-->
     <footer class="footer">
-      <div class="container footer">
+      <div class="container">
         <div class="footer__address">
           <a href="" class="logo footer__logo link"
             >Web<span class="logo__studio logo__studio--accent">Studio</span></a
@@ -449,7 +448,6 @@
         </div>
       </div>
     </footer>
-    -->
     <!--Модальное окно-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
