--- a/portfolio.html
+++ b/portfolio.html
@@ -231,9 +231,9 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
-      <div class="container footer">
-        <div class="footer-address">
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__address">
           <a href="" class="logo footer__logo link"
             >Web<span class="logo__studio logo__studio--accent">Studio</span></a
           >
@@ -266,19 +266,19 @@
             </li>
             <li class="login__item">
               <a href="" class="login__link link"
-                ><svg class="login__icon" width="20" height="20">
+                ><svg class="login__con" width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-twitter"></use></svg
               ></a>
             </li>
             <li class="login__item">
               <a href="" class="login__link link"
-                ><svg class="login__icon" width="20" height="20">
+                ><svg class="login__con" width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-facebook"></use></svg
               ></a>
             </li>
             <li class="login__item">
               <a href="" class="login__link link"
-                ><svg class="login__icon" width="20" height="20">
+                ><svg class="login__con" width="20" height="20">
                   <use href="./img/symbol-defs.svg#icon-linkedin"></use></svg
               ></a>
             </li>
@@ -301,6 +301,6 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
