--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
     </header> -->
     <main>
       <!--Hero-->
-      <!-- <section class="general">
+      <section class="general">
         <div class="container">
           <h1 class="general__title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="general__btn" data-modal-open>
             Заказать услугу
           </button>
         </div>
-      </section> -->
+      </section>
       <!--Specificity-->
       <section class="specificity section">
         <div class="container">
