--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="header-content container">
         <nav class="navigation">
           <a href="" class="logo header__logo link"
@@ -60,7 +60,7 @@
           </li>
         </ul>
       </div>
-    </header> -->
+    </header>
     <main>
       <!--Hero-->
       <section class="general">
