--- a/index.html
+++ b/index.html
@@ -59,6 +59,63 @@
             >
           </li>
         </ul>
+        <button class="mob-menu-open" type="button">
+          <svg class="mob-menu__icon-open" width="40" height="40">
+            <use href="./img/symbol-defs.svg#icon-menu"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="mob-menu is-hidden">
+        <div class="container">
+          <div class="mob-menu-top">
+            <button class="mob-menu-close" type="button">
+              <svg class="mob-menu__icon-close" width="40" height="40">
+                <use href="./img/symbol-defs.svg#icon-close"></use>
+              </svg>
+            </button>
+            <nav class="mob-nav">
+              <ul class="mob-nav__list list">
+                <li class="mob-nav__item">
+                  <a
+                    href="./index.html"
+                    class="mob-nav__link link mob-nav__current"
+                    >Студия</a
+                  >
+                </li>
+                <li class="mob-nav__item">
+                  <a href="./portfolio.html" class="mob-nav__link link"
+                    >Портфолио</a
+                  >
+                </li>
+                <li class="mob-nav__item">
+                  <a href="" class="mob-nav__link link">Контакты</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="mob-menu-bottom">
+            <ul class="mob-contacts list">
+              <li>
+                <a href="tel:+380961111111" class="mob-contacts__tel link"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+              <li>
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="mob-contacts_mail link"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <div class="mob-soc list">
+              <a href="" class="mob-soc__link link">Instagram</a>
+              <a href="" class="mob-soc__link link">Twitter</a>
+              <a href="" class="mob-soc__link link">Facebook</a>
+              <a href="" class="mob-soc__link link">LinkedIn</a>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
     <main>
@@ -536,5 +593,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
