--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </svg>
         </button>
       </div>
-      <div class="mob-menu is-hidden">
+      <!-- <div class="mob-menu is-hidden">
         <div class="container">
           <div class="mob-menu-top">
             <button class="mob-menu-close" type="button">
@@ -116,7 +116,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </header>
     <main>
       <!--Hero-->
