--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </svg>
         </button>
       </div>
-      <!-- <div class="mob-menu is-hidden">
+      <div class="mob-menu is-hidden">
         <div class="container">
           <div class="mob-menu-top">
             <button class="mob-menu-close" type="button">
@@ -95,28 +95,28 @@
           </div>
           <div class="mob-menu-bottom">
             <ul class="mob-contacts list">
-              <li>
-                <a href="tel:+380961111111" class="mob-contacts__tel link"
+              <li class="mob-contacts__tel">
+                <a href="tel:+380961111111" class="mob-contacts__link link"
                   >+38 096 111 11 11</a
                 >
               </li>
-              <li>
+              <li class="mob-contacts__mail">
                 <a
                   href="mailto:info@devstudio.com"
-                  class="mob-contacts_mail link"
+                  class="mob-contacts_link link"
                   >info@devstudio.com</a
                 >
               </li>
             </ul>
             <div class="mob-soc list">
-              <a href="" class="mob-soc__link link">Instagram</a>
+              <a href="" class="mob-soc__link link first">Instagram</a>
               <a href="" class="mob-soc__link link">Twitter</a>
               <a href="" class="mob-soc__link link">Facebook</a>
-              <a href="" class="mob-soc__link link">LinkedIn</a>
+              <a href="" class="mob-soc__link link last">LinkedIn</a>
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
     </header>
     <main>
       <!--Hero-->
