--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
           <ul class="activity__list list">
             <li class="activity__item">
               <img
+                srcset="./img/box-1.jpg 1x, ./img/box-1-2x.jpg 2x"
                 src="./img/box-1.jpg"
                 alt="Работа за компьютером 1"
                 width="370"
@@ -199,6 +200,7 @@
             </li>
             <li class="activity__item">
               <img
+                srcset="./img/box-2.jpg 1x, ./img/box-2-2x.jpg 2x"
                 src="./img/box-2.jpg"
                 alt="Работа за компьютером 2"
                 width="370"
@@ -207,6 +209,7 @@
             </li>
             <li class="activity__item">
               <img
+                srcset="./img/box-3.jpg 1x, ./img/box-3-2x.jpg 2x"
                 src="./img/box-3.jpg"
                 alt="Работа за компьютером 3"
                 width="370"
@@ -222,7 +225,21 @@
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list list">
             <li class="team__item">
-              <img src="./img/igor.jpg" alt="Игорь" width="270" />
+              <picture>
+                <source
+                  srcset="./img/igor-desk.jpg 1x, ./img/igor-desk-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./img/igor-tab.jpg 1x, ./img/igor-tab-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./img/igor-mb.jpg 1x, ./img/igor-mb-2x.jpg 2x"
+                  media="(max-width: 768px)"
+                />
+                <img src="./img/igor-mb.jpg" alt="Игорь" width="460" />
+              </picture>
               <div class="team__card">
                 <h3 class="team__name">Игорь Демьяненко</h3>
                 <p class="team__position">Product Designer</p>
@@ -263,7 +280,21 @@
               </div>
             </li>
             <li class="team__item">
-              <img src="./img/olga.jpg" alt="Ольга" width="270" />
+              <picture>
+                <source
+                  srcset="./img/olga.jpg 1x, ./img/olga-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./img/olga-tab.jpg 1x, ./img/olga-tab-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./img/olga-mb.jpg 1x, ./img/olga-mb-2x.jpg 2x"
+                  media="(max-width: 768px)"
+                />
+                <img src="./img/olga-mb.jpg" alt="Ольга" width="460" />
+              </picture>
               <div class="team__card">
                 <h3 class="team__name">Ольга Репина</h3>
                 <p class="team__position">Frontend Developer</p>
@@ -304,7 +335,21 @@
               </div>
             </li>
             <li class="team__item">
-              <img src="./img/kola.jpg" alt="Николай" width="270" />
+              <picture>
+                <source
+                  srcset="./img/kola.jpg 1x, ./img/kola-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./img/kola-tab.jpg 1x, ./img/kola-tab-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./img/kola-mb.jpg 1x, ./img/kola-mb-2x.jpg 2x"
+                  media="(max-width: 768px)"
+                />
+                <img src="./img/kola-mb.jpg" alt="Николай" width="460" />
+              </picture>
               <div class="team__card">
                 <h3 class="team__name">Николай Тарасов</h3>
                 <p class="team__position">Marketing</p>
@@ -345,7 +390,21 @@
               </div>
             </li>
             <li class="team__item">
-              <img src="./img/misa.jpg" alt="Михаил" width="270" />
+              <picture>
+                <source
+                  srcset="./img/misa.jpg 1x, ./img/misa-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./img/misa-tab.jpg 1x, ./img/misa-tab-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./img/misa-mb.jpg 1x, ./img/misa-mb-2x.jpg 2x"
+                  media="(max-width: 768px)"
+                />
+                <img src="./img/misa-mb.jpg" alt="Николай" width="460" />
+              </picture>
               <div class="team__card">
                 <h3 class="team__name">Михаил Ермаков</h3>
                 <p class="team__position">UI Designer</p>
