--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
           >
           <ul class="navigation__list list">
             <li class="navigation__item">
-              <a href="./index.html" class="navigation__link link current"
+              <a
+                href="./index.html"
+                class="navigation__link link navigation__current"
                 >Студия</a
               >
             </li>
