--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,9 @@
               <a href="./index.html" class="navigation__link link">Студия</a>
             </li>
             <li class="navigation__item">
-              <a href="./portfolio.html" class="navigation__link link current"
+              <a
+                href="./portfolio.html"
+                class="navigation__link link navigation__current"
                 >Портфолио</a
               >
             </li>
@@ -74,14 +76,12 @@
             <nav class="mob-nav">
               <ul class="mob-nav__list list">
                 <li class="mob-nav__item">
-                  <a
-                    href="./index.html"
-                    class="mob-nav__link link mob-nav__current"
-                    >Студия</a
-                  >
+                  <a href="./index.html" class="mob-nav__link link">Студия</a>
                 </li>
                 <li class="mob-nav__item">
-                  <a href="./portfolio.html" class="mob-nav__link link"
+                  <a
+                    href="./portfolio.html"
+                    class="mob-nav__link link mob-nav__current"
                     >Портфолио</a
                   >
                 </li>
