--- a/portfolio.html
+++ b/portfolio.html
@@ -155,7 +155,7 @@
                     />
                     <source
                       srcset="./img/tehno-mb.jpg 1x, ./img/tehno-mb-2x.jpg 2x"
-                      media="(min-width: 767px)"
+                      media="(max-width: 767px)"
                     />
                     <img src="./img/tehno-desk.jpg" alt="Проект1" width="450" />
                   </picture>
@@ -191,7 +191,7 @@
                     />
                     <source
                       srcset="./img/poster-mb.jpg 1x, ./img/poster-mb-2x.jpg 2x"
-                      media="(min-width: 767px)"
+                      media="(max-width: 767px)"
                     />
                     <img
                       src="./img/poster-desk.jpg"
@@ -206,9 +206,7 @@
                   </p>
                 </div>
                 <div class="portfolio-post">
-                  <h2 class="portfolio-name">
-                    Постер New Orlean vs Golden Star
-                  </h2>
+                  <h2 class="portfolio-name">Постер New Orlean vs Golden</h2>
                   <p class="portfolio-text">Дизайн</p>
                 </div>
               </a>
@@ -236,7 +234,7 @@
                         ./img/restoran-mb.jpg    1x,
                         ./img/restoran-mb-2x.jpg 2x
                       "
-                      media="(min-width: 767px)"
+                      media="(max-width: 767px)"
                     />
                     <img
                       src="./img/restoran-desk.jpg"
@@ -273,7 +271,7 @@
                     />
                     <source
                       srcset="./img/prime-mb.jpg 1x, ./img/prime-mb-2x.jpg 2x"
-                      media="(min-width: 767px)"
+                      media="(max-width: 767px)"
                     />
                     <img src="./img/prime-desk.jpg" alt="Проект4" width="450" />
                   </picture>
@@ -306,7 +304,7 @@
                     />
                     <source
                       srcset="./img/boxes-mb.jpg 1x, ./img/boxes-mb-2x.jpg 2x"
-                      media="(min-width: 767px)"
+                      media="(max-width: 767px)"
                     />
                     <img src="./img/boxes-desk.jpg" alt="Проект5" width="450" />
                   </picture>
@@ -336,7 +334,7 @@
                     />
                     <source
                       srcset="./img/insp-mb.jpg 1x, ./img/insp-mb-2x.jpg 2x"
-                      media="(min-width: 767px)"
+                      media="(max-width: 767px)"
                     />
                     <img src="./img/insp-desk.jpg" alt="Проект6" width="450" />
                   </picture>
@@ -366,7 +364,7 @@
                     />
                     <source
                       srcset="./img/lim-mb.jpg 1x, ./img/lim-mb-2x.jpg 2x"
-                      media="(min-width: 767px)"
+                      media="(max-width: 767px)"
                     />
                     <img src="./img/lim-desk.jpg" alt="Проект7" width="450" />
                   </picture>
@@ -396,7 +394,7 @@
                     />
                     <source
                       srcset="./img/lab-mb.jpg 1x, ./img/lab-mb-2x.jpg 2x"
-                      media="(min-width: 767px)"
+                      media="(max-width: 767px)"
                     />
                     <img src="./img/lab-desk.jpg" alt="Проект8" width="450" />
                   </picture>
@@ -426,7 +424,7 @@
                     />
                     <source
                       srcset="./img/busn-mb.jpg 1x, ./img/busn-mb-2x.jpg 2x"
-                      media="(min-width: 767px)"
+                      media="(max-width: 767px)"
                     />
                     <img src="./img/busn-desk.jpg" alt="Проект9" width="450" />
                   </picture>
@@ -446,7 +444,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer section">
       <div class="container">
         <div class="footer__address">
           <a href="" class="logo footer__logo link"
