--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
       </section>
     </main>
     <!--Футер-->
-    <footer class="footer">
+    <footer class="footer section">
       <div class="container">
         <div class="footer__address">
           <a href="" class="logo footer__logo link"
